k8s/api-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
