k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
        - path: /api/?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: api-cluster-ip
              port:
                number: 5000
